deploy: 30645a2d4a438c5afa3916c5526684f174ab1a85

--- a/now/index.html
+++ b/now/index.html
@@ -13,7 +13,7 @@
 <div>
 <p>Last updated 2021-11-11</p>
 <h2 id=living>Living</h2>
-<p>Still in San Francisco</p>
+<p>Still in San Francisco!</p>
 <h2 id=building>Building</h2>
 <p>Working on <a href=https://heyoutline.com>Outline</a>, specifically on giving users a single view of a community member across platforms through the munging of many disparate data sources. I&rsquo;ve had a lot of luck with Elixir/Phoenix, I&rsquo;ve been meaning to write more about it.</p>
 <h2 id=reading>Reading</h2>
