deploy: 9fd07d66338034f553b2509d218a9c7960da0493

--- a/about/index.html
+++ b/about/index.html
@@ -12,15 +12,15 @@
 <h1>About</h1>
 <div>
 <p>Hi, I&rsquo;m Josh.</p>
-<p>I believe in making tools that improve the way people work and create. We spend about 1/3 of our lives building our life’s work, and creating software that plays even the smallest role in this achievement is my passion.</p>
+<p>&lt; mission statement ></p>
 <p>I grew up in The Steel City, Pittsburgh, PA. My parents owned a local candy shop growing up. They were gracious enough to let me help them with their website; my first foray into entrepreneurship and “programming.”</p>
 <p>I went on to study Computer Engineering and Spanish at Penn State. </p>
-<p>After graduation, I headed out west to the Bay Area to work at Cisco. I landed in an organization that was comprised of prior startup acquisitions and college graduates. We worked on the next generation of <a href=https://www.webex.com/>Webex</a>. I learned a lot about Silicon Valley engineering culture and developing software at scale.</p>
+<p>After graduation, I headed out west to the Bay Area to work at Cisco. I landed in an organization that was comprised of prior acquisitions and college graduates. We worked on the next generation of <a href=https://www.webex.com/>Webex</a>. I learned a lot about Silicon Valley engineering culture and developing software at scale.</p>
 <p>Surrendering to the startup itch, I went on to work at <a href=https://a16z.com/2015/03/03/toutapp/>ToutApp</a> at the time they were 30 people and had just raised a Series B from investors like a16z. We shipped a lot of products and helped shape the now $3B sales software category. I spent a few years leading one of the engineering teams before ultimately being acquired by Marketo.</p>
 <p>After a year of integrating ToutApp and Marketo and launching publicly, I took a short period of time off to figure out what was next.</p>
 <p>Deciding I wanted to downsize, I joined the founding team at DataGrail. I went on to manage the engineering team, where we implemented some of the earliest software to automate data privacy regulations like GDPR and CCPA.</p>
-<p>I’m now spending my days as CTO and Co-founder of Outline. We believe there is so much invaluable siloed customer data, and we are building a platform to help companies utilize this data to build stronger customer relationships and make better decisions.</p>
-<p>I’m based in San Francisco, and I spend most of my free time exploring it. I love cycling, you can usually find me on Hawk Hill most Sundays. I enjoy reading, and I’m always open to new book recommendations.</p>
+<p>I’m now spending my days as CTO and Co-founder of Outline, where we are helping companies understand and engage with their customer communities. &lt; more ></p>
+<p>I’m based in San Francisco, and I spend most of my free time exploring it. I love cycling, you can usually find me on Hawk Hill most Sundays. I enjoy reading, and I’m always open to new book recommendations. &lt; fix ></p>
 </div>
 </div>
 </div>
