--- a/now/index.html
+++ b/now/index.html
@@ -18,13 +18,12 @@
 <p>Working on <a href=https://heyoutline.com>Outline</a>, specifically on giving users a single view of a community member across platforms through the munging of many disparate data sources. I&rsquo;ve had a lot of luck with Elixir/Phoenix, I&rsquo;ve been meaning to write more about it.</p>
 <h2 id=reading>Reading</h2>
 <p>I&rsquo;ve been reading a lot less this year, but I&rsquo;ve recently found myself back in the groove and have been cycling through a few books: The Inner Game of Music, Why We Can&rsquo;t Wait, and The Need for Roots.</p>
-<p>There&rsquo;s been a few newsletters that have become immediate reads once they land in the RSS feed: Matt Levine Money Stuff, Bookbear Express,</p>
 <h2 id=watching>Watching</h2>
 <p>A lot of Warriors basketball and Seinfeld.</p>
 <h2 id=listening>Listening</h2>
 <p>Waxahatchee St. Cloud,</p>
 <p>Sound Radio, Reverberation Radio, New Commute</p>
-<p>TILclimate, All Fantasy Everything</p>
+<p>All Fantasy Everything, TILclimate,</p>
 <h2 id=learning>Learning</h2>
 <p>To wake up earlier.</p>
 <p>The ins and outs of restoring a vintage turntable (Garrard 990b).</p>
