deploy: a3622664cba36c84cf7fa35eabac5c5ef51ea628

--- a/about/index.html
+++ b/about/index.html
@@ -11,16 +11,12 @@
 <a class=nav__link href=/>← Home</a>
 <h1>About</h1>
 <div>
-<p>Hi, I&rsquo;m Josh.</p>
-<p>&lt; mission statement ></p>
-<p>I grew up in The Steel City, Pittsburgh, PA. My parents owned a local candy shop growing up. They were gracious enough to let me help them with their website; my first foray into entrepreneurship and “programming.”</p>
-<p>I went on to study Computer Engineering and Spanish at Penn State. </p>
-<p>After graduation, I headed out west to the Bay Area to work at Cisco. I landed in an organization that was comprised of prior acquisitions and college graduates. We worked on the next generation of <a href=https://www.webex.com/>Webex</a>. I learned a lot about Silicon Valley engineering culture and developing software at scale.</p>
-<p>Surrendering to the startup itch, I went on to work at <a href=https://a16z.com/2015/03/03/toutapp/>ToutApp</a> at the time they were 30 people and had just raised a Series B from investors like a16z. We shipped a lot of products and helped shape the now $3B sales software category. I spent a few years leading one of the engineering teams before ultimately being acquired by Marketo.</p>
-<p>After a year of integrating ToutApp and Marketo and launching publicly, I took a short period of time off to figure out what was next.</p>
-<p>Deciding I wanted to downsize, I joined the founding team at DataGrail. I went on to manage the engineering team, where we implemented some of the earliest software to automate data privacy regulations like GDPR and CCPA.</p>
-<p>I’m now spending my days as CTO and Co-founder of Outline, where we are helping companies understand and engage with their customer communities. &lt; more ></p>
-<p>I’m based in San Francisco, and I spend most of my free time exploring it. I love cycling, you can usually find me on Hawk Hill most Sundays. I enjoy reading, and I’m always open to new book recommendations. &lt; fix ></p>
+<p>Hi, I&rsquo;m Josh. Welcome to my humble internet abode.</p>
+<p><strong>I grew up in Pittsburgh, PA in a small-business family.</strong> My parents were gracious enough to allow me to help with their ecommerce website, my first foray into entrpreneurship and &ldquo;programmming.&rdquo;</p>
+<p><strong>I studied Computer Science at Penn State University.</strong> Participating in <a href=https://startupweek.psu.edu/>Startup Week</a> exposed me to the tech industry and inspired me to make the move out west.</p>
+<p><strong>I&rsquo;ve scaled products and teams from inception through exit.</strong> I&rsquo;ve worked alongside the good people at <a href=https://www.webex.com/all-new-webex.html>Cisco</a>, <a href=https://www.marketo.com/software/marketo-sales-connect/>Toutapp</a>, <a href=https://www.datagrail.io/>DataGrail</a>, and <a href=https://www.marketo.com/>Marketo</a>.</p>
+<p><strong>I&rsquo;m currently spending my days at <a href=https://heyoutline.com>Outline</a>, helping companies understand and engage with their customer communities.</strong></p>
+<p><strong>I spend time cycling around the Bay Area, <a href="https://sudden-iberis-6da.notion.site/13e94733b8014bf1984e62d89de8caa6?v=b3007446c7064e8780622ef1558312f9">collecting vinyls</a>, and <a href=https://www.goodreads.com/kuiros>reading</a>.</strong></p>
 </div>
 </div>
 </div>
