--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head>
-<meta name=generator content="Hugo 0.89.2">
+<meta name=generator content="Hugo 0.89.3">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/reset.css>
@@ -35,13 +35,13 @@ DataGrail
 <a href=https://joshplusrach.netlify.com target=_blank rel="noopener noreferrer">
 Wedding
 </a>
-: Info for the big day
+: Dinner, drinks, dancing
 </div>
 <div>
 <a href=https://github.com/kuiro5/home target=_blank rel="noopener noreferrer">
 Home
 </a>
-: Code for this website
+: My internet oasis
 </div>
 <div>
 <a href=https://www.marketo.com/software/marketo-sales-connect target=_blank rel="noopener noreferrer">
