--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head>
-<meta name=generator content="Hugo 0.89.3">
+<meta name=generator content="Hugo 0.89.4">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/reset.css>
@@ -14,7 +14,7 @@
 <img class=bio__profile-image src=/images/me.png>
 <div class=bio__message>
 <p>I'm a programmer and founder based in San Francisco.</p>
-<p>Currently, I'm spending my days as CTO of <a href=https://heyoutline.com target=_blank rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href=/about>About</a> • <a href=/now>Now</a></p>
+<p>Currently, I'm spending my days as CTO of <a href=https://heyoutline.com target=_blank rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href=/about>About</a> • <a href=/now>Now</a> • <a href=/contact>Contact</a></p>
 </div>
 </div>
 <div class=home-section>
@@ -41,11 +41,11 @@ Wedding
 <a href=https://github.com/kuiro5/home target=_blank rel="noopener noreferrer">
 Home
 </a>
-: My internet oasis
+: You are here
 </div>
 <div>
 <a href=https://www.marketo.com/software/marketo-sales-connect target=_blank rel="noopener noreferrer">
-ToutApp
+Toutapp
 </a>
 : Workflow tool for sales teams
 </div>
@@ -59,7 +59,7 @@ Cisco Spark
 <a href=https://www.energy.gov/articles/energy-efficient-buildings-hub target=_blank rel="noopener noreferrer">
 EEBHub
 </a>
-: Open source tool to simulate building energy
+: Building energy consumption simulation
 </div>
 </div>
 <div class=home-section>
@@ -69,6 +69,9 @@ EEBHub
 </div>
 <div>
 <a href=/places/new-york>New York</a>
+</div>
+<div>
+<a href=/places/pittsburgh>Pittsburgh</a>
 </div>
 </div>
 <div class=home-section>
