--- a/now/index.html
+++ b/now/index.html
@@ -15,18 +15,18 @@
 <h2 id=living>Living</h2>
 <p>Still in San Francisco!</p>
 <h2 id=building>Building</h2>
-<p>Working on <a href=https://heyoutline.com>Outline</a>, specifically on giving users a single view of a community member across platforms through the munging of many disparate data sources. I&rsquo;ve had a lot of luck with Elixir/Phoenix, I&rsquo;ve been meaning to write more about it.</p>
+<p>Working on <a href=https://heyoutline.com>Outline</a>, specifically on giving users a single view of a community member across platforms through the munging of many disparate data sources. I&rsquo;ve had a lot of luck with <a href=https://elixir-lang.org/>Elixir</a> and <a href=https://www.phoenixframework.org/>Phoenix</a>, I&rsquo;m overdue for a post about it.</p>
 <h2 id=reading>Reading</h2>
 <p>I&rsquo;ve been reading a lot less this year, but I&rsquo;ve recently found myself back in the groove and have been cycling through a few books: The Inner Game of Music, Why We Can&rsquo;t Wait, and The Need for Roots.</p>
 <h2 id=watching>Watching</h2>
 <p>A lot of Warriors basketball and Seinfeld.</p>
 <h2 id=listening>Listening</h2>
-<p>Waxahatchee St. Cloud,</p>
-<p>Sound Radio, Reverberation Radio, New Commute</p>
-<p>All Fantasy Everything, TILclimate,</p>
+<p>Some albums that have been on repeat—Waxahatchee <em>St. Cloud</em>, Snail Mail <em>Valentine</em>, Helado Negro <em>Far In</em>, Bill Evans <em>At the Village Vanguard</em></p>
+<p>Reverberation Radio, New Commute, KEXP</p>
 <h2 id=learning>Learning</h2>
 <p>To wake up earlier.</p>
 <p>The ins and outs of restoring a vintage turntable (Garrard 990b).</p>
+<p>Diving deeper into climate change</p>
 <p><a href=https://nownownow.com/about>What is a &ldquo;now page&rdquo;?</a></p>
 </div>
 </div>
