deploy: 64a63f9e8f3a6776d015fb9dacf3cd5d2c007cf5

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,6 +13,7 @@
 <div>
 <ul>
 <li>josh [at] this website [dot] com</li>
+<li><a href=https://github.com/kuiro5>Github</a></li>
 <li><a href=https://twitter.com/kuiro5>Twitter</a></li>
 <li><a href=https://www.goodreads.com/user/show/21617276-joshua-kuiros>Goodreads</a></li>
 <li><a href=https://pinboard.in/u:kuiro5>Pinboard</a></li>
