deploy: 73ad07867b7395816f8af19c76bbef5acaca6708

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,10 +9,11 @@
 <body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1>Contact</h1>
+<h1 class=page-title>Contact</h1>
 <div>
+<p>Elsewhere on the internet:</p>
 <ul>
-<li>josh [at] this website [dot] com</li>
+<li>josh [at] this website</li>
 <li><a href=https://github.com/kuiro5>Github</a></li>
 <li><a href=https://twitter.com/kuiro5>Twitter</a></li>
 <li><a href=https://www.goodreads.com/user/show/21617276-joshua-kuiros>Goodreads</a></li>
