--- a/photos/mendocino/index.html
+++ b/photos/mendocino/index.html
@@ -9,7 +9,7 @@
 <body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1>Mendocino</h1>
+<h1 class=page-title>Mendocino</h1>
 <div>
 <script src=/shortcode-gallery/jquery-3.6.0.min.js></script>
 <script src=/shortcode-gallery/lazy/jquery.lazy.min.js></script>
