--- a/places/pittsburgh/index.html
+++ b/places/pittsburgh/index.html
@@ -9,7 +9,7 @@
 <body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1>Pittsburgh</h1>
+<h1 class=page-title>Pittsburgh</h1>
 <div>
 <h2 id=restaurants>Restaurants</h2>
 <ul>
