--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,12 @@
 <body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1>About</h1>
+<h1 class=page-title>About</h1>
 <div>
 <p>Hi, I&rsquo;m Josh. Welcome to my humble internet abode 🏡.</p>
-<p><strong>I grew up in Pittsburgh, Pennsylvania.</strong> My parents owned a small, family candy business and were gracious enough to allow me to help with their ecommerce website; my first foray into entrpreneurship and &ldquo;programmming.&rdquo;</p>
+<p><strong>I grew up in Pittsburgh, Pennsylvania.</strong> My parents run a small, family candy business and were gracious enough to allow me to help with their ecommerce website; my first foray into entrpreneurship and &ldquo;programmming.&rdquo;</p>
 <p><strong>I studied Computer Science at Penn State University.</strong> Through an annual <a href=https://startupweek.psu.edu/>Startup Week</a>, I connected with Silicon Valley founders, inspiring me to make the move out west.</p>
-<p><strong>I&rsquo;ve built and scaled products and teams from inception through exit.</strong> I&rsquo;ve worked alongside the good people at <a href=https://www.webex.com/all-new-webex.html>Cisco</a>, <a href=https://www.marketo.com/software/marketo-sales-connect/>Toutapp</a>, <a href=https://www.datagrail.io/>DataGrail</a>, and <a href=https://www.marketo.com/>Marketo</a>. Category-creating products and low-ego teams are my jam.</p>
+<p><strong>I&rsquo;ve built and scaled products and teams from inception through exit.</strong> I&rsquo;ve worked alongside talented people at <a href=https://www.webex.com/all-new-webex.html>Cisco</a>, <a href=https://www.marketo.com/software/marketo-sales-connect/>Toutapp</a>, <a href=https://www.datagrail.io/>DataGrail</a>, and <a href=https://www.marketo.com/>Marketo</a>. Category-creating products and low-ego teams are my jam.</p>
 <p><strong>I enjoy building applications and infrastructure with a love for simplicity, reliability, and flexibility.</strong> I&rsquo;m a polyglot programmer that believes in choosing the right tool for the job but some recent favorites are Elixir, Python, React, and Kafka.</p>
 <p><strong>I&rsquo;m currently spending my days as CTO and Cofounder of <a href=https://heyoutline.com>Outline</a>, helping companies understand and engage with their customer communities.</strong> We founded Outline in July 2019, and we&rsquo;ve raised venture capital from <a href=https://www.southparkcommons.com/>South Park Commons</a>, <a href=http://tnt.ventures/>TnT Ventures</a>, and a host of angel investors.</p>
 <p><strong>I spend time cycling around the Bay Area, <a href="https://sudden-iberis-6da.notion.site/13e94733b8014bf1984e62d89de8caa6?v=b3007446c7064e8780622ef1558312f9">collecting vinyls</a>, fermenting food, and <a href=https://www.goodreads.com/kuiros>reading</a>.</strong> Meditation has been a big part of my life and a perpetual work in progress.</p>
