--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body><div class=main>
 <div class=main__content>
-<h1>Hi, I'm Josh.</h1>
+<h1 class=page-title>Hi, I'm Josh.</h1>
 <div class=bio>
 <img class=bio__profile-image src=/images/me.png>
 <div class=bio__message>
@@ -17,7 +17,6 @@
 <p>Currently, I'm spending my days as CTO of <a href=https://heyoutline.com target=_blank rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href=/about>About</a> • <a href=/now>Now</a> • <a href=/contact>Contact</a></p>
 </div>
 </div>
-<div class=home-section>
 <h1>Code</h1>
 <div>
 <a href=https://www.heyoutline.com target=_blank rel="noopener noreferrer">
@@ -67,8 +66,6 @@ EEBHub
 </a>
 : Building energy consumption simulation
 </div>
-</div>
-<div class=home-section>
 <h1>Places</h1>
 <div>
 <a href=/places/san-francisco>San Francisco</a>
@@ -79,8 +76,6 @@ EEBHub
 <div>
 <a href=/places/pittsburgh>Pittsburgh</a>
 </div>
-</div>
-<div class=home-section>
 <h1>Photos</h1>
 <div>
 <a href=/photos/bali>Bali</a>
@@ -93,7 +88,6 @@ EEBHub
 </div>
 <div>
 <a href=/photos/sea_ranch>Sea Ranch</a>
-</div>
 </div>
 </div>
 </div>
