deploy: cd75355ef1748250436159b280b76a97f5007e3f

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head>
-<meta name=generator content="Hugo 0.89.4">
+<meta name=generator content="Hugo 0.92.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/style.css>
@@ -76,6 +76,9 @@ EEBHub
 <a href=/places/pittsburgh>Pittsburgh</a>
 </div>
 <h1>Photos</h1>
+<div>
+<a href=/photos/bode>Bode</a>
+</div>
 <div>
 <a href=/photos/bali>Bali</a>
 </div>
