deploy: 04e53cdbb9ca4f7acb41cb9df218712e09995fb2

--- a/now/index.html
+++ b/now/index.html
@@ -3,39 +3,12 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/style.css>
 <link href="//fonts.googleapis.com/css?family=Spectral:400,400i,700,700i" rel=stylesheet>
-<title>kuiros.io | Now</title>
-</head>
-<body><div class=main>
+<title>Kuiros | Now</title></head><body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1 class=page-title>Now</h1>
-<div>
-<p><em>Last updated 2021-11-11</em> • <em><a href=https://nownownow.com/about>What is a &ldquo;now page&rdquo;?</a></em></p>
-<h2 id=living>Living</h2>
-<p>Still in San Francisco</p>
-<h2 id=building>Building</h2>
-<p>Working on <a href=https://heyoutline.com>Outline</a>, specifically on giving users a single view of a community member across platforms through the munging of many disparate data sources. I&rsquo;ve had a lot of luck with <a href=https://elixir-lang.org/>Elixir</a> and <a href=https://www.phoenixframework.org/>Phoenix</a>, I&rsquo;m overdue for a post about it.</p>
-<h2 id=reading>Reading</h2>
-<p>I&rsquo;ve been reading a lot less this year, but I&rsquo;ve recently found myself back in the groove and have been cycling through a few books—The Inner Game of Music, Why We Can&rsquo;t Wait, The Need for Roots.</p>
-<h2 id=watching>Watching</h2>
-<p>A lot of Warriors basketball and Seinfeld.</p>
-<h2 id=listening>Listening</h2>
-<p>Some albums that have been on repeat—Waxahatchee <em>St. Cloud</em>, Snail Mail <em>Valentine</em>, Helado Negro <em>Far In</em>, Bill Evans <em>Sunday at the Village Vanguard</em>.</p>
-<p>Reverberation Radio, New Commute, KEXP</p>
-<h2 id=learning>Learning</h2>
-<p>To wake up earlier.</p>
-<p>The ins and outs of restoring a vintage turntable (Garrard 990b).</p>
-<p>Diving deeper into climate change</p>
-</div>
-</div>
-</div>
-<div class=footer><div class=footer>
+<h1 class=page-title>Now</h1><div>
+<p><em>Last updated 2021-02-23</em> • <em><a href=https://nownownow.com/about target=_blank>What is a “now page”?</a></em></p><h2 id=living>Living</h2><p>Still in San Francisco</p><h2 id=reading>Reading</h2><p>I&rsquo;m rereading Martin Kleppmann&rsquo;s excellent <a href=https://www.amazon.com/Designing-Data-Intensive-Applications-Reliable-Maintainable/dp/1449373321 target=_blank>Designing Data-Intensive Applications</a> and associated whitepapers.</p><p>After sitting at the top of my to read list for a while, I&rsquo;ve been really enjoying John Steinbeck&rsquo;s <a href=https://www.amazon.com/East-Eden-Oprahs-Book-Club/dp/0670033049 target=_blank>East of Eden</a>.</p><h2 id=watching>Watching</h2><p>Warriors basketball, Go Dubs!</p><h2 id=listening>Listening</h2><p>I&rsquo;ve made a Spotify playlist of what I&rsquo;m listening to each season for the past 8 years, here is <a href="https://open.spotify.com/playlist/0aOMGJFzhCNrwKgGRPuGIr?si=6bf3149bb8004854" target=_blank>Winter ‘21</a>.</p><p>Some albums that I&rsquo;ve had on repeat are Julia Jacklin <em>Crushing</em>, Sam Evian <em>Time to Melt</em>, and Roy Fuyuki <em>Scenery</em>.</p><h2 id=learning>Learning</h2><p>How to raise a puppy! Rach and I recently added <a href=/photos/bode>Bode</a>, a Soft-Coated Wheaten Terrier, to our family in January. We&rsquo;ve found Zak George&rsquo;s <a href=https://www.youtube.com/c/zakgeorge/videos target=_blank>YouTube channel</a> and books to be a boon, and this whole experience has really underscored the importance of trust building and positive reinforcement learning. We&rsquo;re having a blast!</p></div></div></div><div class=footer><div class=footer>
 <div class=footer__content>
 <p>
 Made with ☕️❤️ 🎵 in California
-</p>
-</div>
-</div>
-</div>
-</body>
-</html>
+</p></div></div></div></body></html>
