--- a/places/pittsburgh/index.html
+++ b/places/pittsburgh/index.html
@@ -3,45 +3,16 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/style.css>
 <link href="//fonts.googleapis.com/css?family=Spectral:400,400i,700,700i" rel=stylesheet>
-<title>kuiros.io | Pittsburgh</title>
-</head>
-<body><div class=main>
+<title>Kuiros | Pittsburgh</title></head><body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1 class=page-title>Pittsburgh</h1>
-<div>
-<h2 id=restaurants>Restaurants</h2>
-<ul>
-<li>Iron Born Pizza | Pizza | Millvale</li>
-<li>Pusadee&rsquo;s Garden | Thai | Lawrenceville</li>
-<li>Condado Tacos | Mexican | Lawrenceviille</li>
-</ul>
-<h2 id=breweries-wine--bars>Breweries, Wine, & Bars</h2>
-<ul>
-<li>Cinderlands | Brewery | Strip District</li>
-<li>Gristhouse | Brewery | Millvale</li>
-<li>Strange Roots | Brewery | Millvale</li>
-<li>Kingfly Spirits | Distillery | Strip District</li>
-</ul>
-<h2 id=arts-parks--entertainment>Arts, Parks, & Entertainment</h2>
-<ul>
-<li>Andy Warhol Museum | Museum | North Shore</li>
-<li>Incline | Funicular | South Side</li>
-</ul>
-<h2 id=hiking-biking--camping>Hiking, Biking, & Camping</h2>
-<ul>
-<li>North Shore River Trail | Cycling | North Shore</li>
-</ul>
-</div>
-</div>
-</div>
-<div class=footer><div class=footer>
+<h1 class=page-title>Pittsburgh</h1><div>
+<h2 id=restaurants>Restaurants</h2><ul>
+<li>Iron Born Pizza | Pizza | Millvale</li><li>Pusadee&rsquo;s Garden | Thai | Lawrenceville</li><li>Condado Tacos | Mexican | Lawrenceviille</li></ul><h2 id=breweries-wine--bars>Breweries, Wine, & Bars</h2><ul>
+<li>Cinderlands | Brewery | Strip District</li><li>Gristhouse | Brewery | Millvale</li><li>Strange Roots | Brewery | Millvale</li><li>Kingfly Spirits | Distillery | Strip District</li></ul><h2 id=arts-parks--entertainment>Arts, Parks, & Entertainment</h2><ul>
+<li>Andy Warhol Museum | Museum | North Shore</li><li>Incline | Funicular | South Side</li></ul><h2 id=hiking-biking--camping>Hiking, Biking, & Camping</h2><ul>
+<li>North Shore River Trail | Cycling | North Shore</li></ul></div></div></div><div class=footer><div class=footer>
 <div class=footer__content>
 <p>
 Made with ☕️❤️ 🎵 in California
-</p>
-</div>
-</div>
-</div>
-</body>
-</html>
+</p></div></div></div></body></html>
