--- a/index.html
+++ b/index.html
@@ -1,105 +1,72 @@
 <!doctype html><html><head>
-<meta name=generator content="Hugo 0.92.0">
+<meta name=generator content="Hugo 0.93.1">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/style.css>
 <link href="//fonts.googleapis.com/css?family=Spectral:400,400i,700,700i" rel=stylesheet>
-<title>kuiros.io</title>
-</head>
-<body><div class=main>
+<title>Kuiros</title></head><body><div class=main>
 <div class=main__content>
-<h1 class=page-title>Hi, I'm Josh.</h1>
-<div class=bio>
+<h1 class=page-title>Hi, I'm Josh.</h1><div class=bio>
 <img class=bio__profile-image src=/images/me.png>
 <div class=bio__message>
-<p>I'm a programmer and founder based in San Francisco.</p>
-<p>Currently, I'm spending my days as CTO of <a href=https://heyoutline.com target=_blank rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href=/about>About</a> • <a href=/now>Now</a> • <a href=/contact>Contact</a></p>
-</div>
-</div>
-<h1>Code</h1>
-<div>
+<p>I'm a programmer, and founder based in San Francisco.</p><p>Currently, I'm spending my days as CTO of <a href=https://heyoutline.com target=_blank rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href=/about>About</a> • <a href=/now>Now</a> • <a href=/contact>Contact</a></p></div></div><h1>Code</h1><div>
 <a href=https://www.heyoutline.com target=_blank rel="noopener noreferrer">
 Outline
 </a>
 : Community operating system
-</div>
-<div>
+</div><div>
 <a href=https://www.datagrail.io target=_blank rel="noopener noreferrer">
 DataGrail
 </a>
 : Data compliance as a service
-</div>
-<div>
+</div><div>
 <a href=https://joshplusrach.netlify.com target=_blank rel="noopener noreferrer">
 Wedding
 </a>
 : Dinner, drinks, dancing
-</div>
-<div>
+</div><div>
 <a href=https://github.com/kuiro5/home target=_blank rel="noopener noreferrer">
 Home
 </a>
 : You are here
-</div>
-<div>
+</div><div>
 <a href=https://www.marketo.com target=_blank rel="noopener noreferrer">
 Marketo
 </a>
 : Marketing automation platform
-</div>
-<div>
+</div><div>
 <a href=https://www.marketo.com/software/marketo-sales-connect target=_blank rel="noopener noreferrer">
 Toutapp
 </a>
 : Workflow tool for sales teams
-</div>
-<div>
+</div><div>
 <a href=https://www.ciscospark.com target=_blank rel="noopener noreferrer">
 Cisco Spark
 </a>
 : Enterprise messaging platform
-</div>
-<div>
+</div><div>
 <a href=https://www.energy.gov/articles/energy-efficient-buildings-hub target=_blank rel="noopener noreferrer">
 EEBHub
 </a>
 : Building energy consumption simulation
-</div>
-<h1>Places</h1>
-<div>
+</div><h1>Places</h1><div>
 <a href=/places/san-francisco>San Francisco</a>
-</div>
-<div>
+</div><div>
 <a href=/places/new-york>New York</a>
-</div>
-<div>
+</div><div>
 <a href=/places/pittsburgh>Pittsburgh</a>
-</div>
-<h1>Photos</h1>
-<div>
+</div><h1>Photos</h1><div>
 <a href=/photos/bode>Bode</a>
-</div>
-<div>
+</div><div>
 <a href=/photos/bali>Bali</a>
-</div>
-<div>
+</div><div>
 <a href=/photos/joshua_tree>Joshua Tree</a>
-</div>
-<div>
+</div><div>
 <a href=/photos/mendocino>Mendocino</a>
-</div>
-<div>
+</div><div>
 <a href=/photos/sea_ranch>Sea Ranch</a>
-</div>
-</div>
-</div>
-<div class=footer><div class=footer>
+</div></div></div><div class=footer><div class=footer>
 <div class=footer__content>
 <p>
 Made with ☕️❤️ 🎵 in California
-</p>
-</div>
-</div>
-</div>
-</body>
-</html>
+</p></div></div></div></body></html>
