--- a/places/new-york/index.html
+++ b/places/new-york/index.html
@@ -3,48 +3,16 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=stylesheet type=text/css href=/css/style.css>
 <link href="//fonts.googleapis.com/css?family=Spectral:400,400i,700,700i" rel=stylesheet>
-<title>kuiros.io | New York</title>
-</head>
-<body><div class=main>
+<title>Kuiros | New York</title></head><body><div class=main>
 <div class=main__content>
 <a class=nav__link href=/>← Home</a>
-<h1 class=page-title>New York</h1>
-<div>
-<h2 id=restaurants>Restaurants</h2>
-<ul>
-<li>Balthazar | French | Soho</li>
-<li>Somtum Der | Thai | East Village</li>
-<li>Hanoi House | Vietnamese | East Village</li>
-</ul>
-<h2 id=breweries-wine--bars>Breweries, Wine, & Bars</h2>
-<ul>
-<li>Other Half | Brewery | Williamsburg</li>
-<li>Grimm | Brewery | Williamsburg</li>
-<li>Decibel | Sake Bar | East Village</li>
-</ul>
-<h2 id=arts-parks--entertainment>Arts, Parks, & Entertainment</h2>
-<ul>
-<li>Highline | Park | Chelsea</li>
-<li>Domino Park | Park | Williamsburg</li>
-</ul>
-<h2 id=takeout>Takeout</h2>
-<ul>
-<li>Brooklyn Bagel | Bagels | Greenwich Village</li>
-<li>Bagelsmith | Bagels | Williamsburg</li>
-<li>Scarr&rsquo;s | Pizza | Lower East Side</li>
-<li>Roberta&rsquo;s | Pizza | Williamsburg</li>
-<li>Peter Pan | Breakfast | Greenpoint</li>
-</ul>
-</div>
-</div>
-</div>
-<div class=footer><div class=footer>
+<h1 class=page-title>New York</h1><div>
+<h2 id=restaurants>Restaurants</h2><ul>
+<li>Balthazar | French | Soho</li><li>Somtum Der | Thai | East Village</li><li>Hanoi House | Vietnamese | East Village</li></ul><h2 id=breweries-wine--bars>Breweries, Wine, & Bars</h2><ul>
+<li>Other Half | Brewery | Williamsburg</li><li>Grimm | Brewery | Williamsburg</li><li>Decibel | Sake Bar | East Village</li></ul><h2 id=arts-parks--entertainment>Arts, Parks, & Entertainment</h2><ul>
+<li>Highline | Park | Chelsea</li><li>Domino Park | Park | Williamsburg</li></ul><h2 id=takeout>Takeout</h2><ul>
+<li>Brooklyn Bagel | Bagels | Greenwich Village</li><li>Bagelsmith | Bagels | Williamsburg</li><li>Scarr&rsquo;s | Pizza | Lower East Side</li><li>Roberta&rsquo;s | Pizza | Williamsburg</li><li>Peter Pan | Breakfast | Greenpoint</li></ul></div></div></div><div class=footer><div class=footer>
 <div class=footer__content>
 <p>
 Made with ☕️❤️ 🎵 in California
-</p>
-</div>
-</div>
-</div>
-</body>
-</html>
+</p></div></div></div></body></html>
